# ComfyUI-CSV-Loader

./: .gitignore  README.md  __init__.py  csv_loader.py  pyproject.toml
CSV/: artists.csv  artmovements.csv  characters.csv  colors.csv  composition.csv  lighting.csv  negative.csv  positive.csv  settings.csv  styles.csv
